force-app/main/default/objects/DocuSign_Envelop_Setting__mdt.object
<CustomObject>
    <description>Configuration for creating new DocuSign envelops</description>
    <fields>
        <fullName>Email_Blurb__c</fullName>
        <description>This is the same as the email body. If the sender enters an email blurb, it is included in the email body for all envelope recipients.</description>
        <inlineHelpText>This is the text that will be included in the email body for the emails sent from DocuSign</inlineHelpText>
        <label>Email Blurb</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Email_Subject__c</fullName>
        <description>The subject line of the email message that is sent to all recipients.</description>
        <label>Email Subject</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Reminder_Delay__c</fullName>
        <description>An integer specifying the number of days after the recipient receives the envelope that reminder emails are sent to the recipient.</description>
        <inlineHelpText>An integer specifying the number of days after the recipient receives the envelope that reminder emails are sent to the recipient.</inlineHelpText>
        <label>Reminder Delay</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Reminder_Enabled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Reminder Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reminder_Frequency__c</fullName>
        <description>An integer specifying the interval in days between reminder emails.</description>
        <inlineHelpText>An integer specifying the interval in days between reminder emails.</inlineHelpText>
        <label>Reminder Frequency</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>DocuSign Envelop Setting</label>
    <pluralLabel>DocuSign Envelop Settings</pluralLabel>
</CustomObject>